fix: ! avoid option button overlay on mobile

--- a/src/ui/ModalOptionsEditor.scss
+++ b/src/ui/ModalOptionsEditor.scss
@@ -2,6 +2,12 @@
     inset-inline-end: var(--size-4-8);
 }
 
+.is-mobile {
+    .modal-option-button {
+        inset-inline-end: var(--size-4-16);
+    }
+}
+
 .tasks-options-modal {
     padding: 0;
 
